# rezpackages

./: .gitattributes  .gitignore  REZLIST.txt
alembic/1.6.1/: CMakeLists.txt  package.py
arch/x86_64/: package.py
autoconf/2.63/: package.py
autoconf/2.69/: CMakeLists.txt  package.py
autogen/5.18.7/: CMakeLists.txt  package.py
automake/1.11.1/: CMakeLists.txt  package.py
automake/1.15/: package.py
boost/1.55.0/: CMakeLists.txt  package.py
boost/1.66.0/: CMakeLists.txt  package.py
cmake/3.10.0/: CMakeLists.txt  package.py
doubleconversion/1.1.5/: CMakeLists.txt  package.py
fdk_aac/0.1.5/: CMakeLists.txt  package.py
ffmpeg/3.0.7/: CMakeLists.txt  build.sh  package.py
ffmpeg/3.2.4/: CMakeLists.txt  package.py
ffmpeg/3.4/: CMakeLists.txt  package.py
gcc/4.1.2/: build.sh  package.py
gcc/4.8.2/: build.sh  package.py
gcc/4.8.5/: CMakeLists.txt  package.py
gcc/6.3.1/: package.py
glfw/3.2.1/: CMakeLists.txt  package.py
gto/3.5.3/: CMakeLists.txt  package.py
hdf5/1.8.12/: CMakeLists.txt  package.py
hdf5/1.8.9/: package.py
houdini/16.0.633/: package.py
ilmbase/2.2.0/: CMakeLists.txt  package.py
imagemagick/7.0.7-24/: CMakeLists.txt  package.py
katana/2.5.4/: package.py
lame/3.100/: CMakeLists.txt  package.py
libtool/2.2.6b/: CMakeLists.txt  package.py
libtool/2.4.6/: package.py
maya/2016.5/: package.py
maya/2016EXT1SP5/: package.py
maya/2016EXT2/: package.py
maya/2018UPD1/: package.py
numpy/1.14.0/: CMakeLists.txt  package.py
ogg/1.3.3/: CMakeLists.txt  package.py
opencolorio/1.0.9/: CMakeLists.txt  package.py
openexr/2.2.0/: CMakeLists.txt  package.py
openimageio/1.7.11/: CMakeLists.txt  package.py
openimageio/2.0.0/: CMakeLists.txt  package.py
opensubdiv/3.2.0/: CMakeLists.txt  package.py
openvdb/5.1.0/: CMakeLists.txt  package.py
opus/1.2.1/: CMakeLists.txt  package.py
os/CentOS-6.5/: package.py
package_archives/ffmpeg/: last_x264.tar.bz2
package_archives/glew/: glew-1.10.0.tgz
package_archives/qt/: qt-everywhere-opensource-src-5.6.3.tar.xz
package_archives/tbb/: tbb-4.3.1.tgz  tbb-4.3.tgz  tbb-4.4.tgz
package_archives/vpx/: libvpx-1.6.1.tar.bz2
package_archives/x264/: x264-snapshot-20171123-2245-stable.tar.bz2
pip/7.1.2/: package.py
pip/8.1.2/: package.py
pip/9.0.1/: CMakeLists.txt  package.py
platform/linux/: package.py
prman/21.0/: package.py
prman_for_katana/21.1/: package.py
ptex/2.0.30/: CMakeLists.txt  package.py
ptex/2.1.28/: CMakeLists.txt  package.py
pyilmbase/2.2.0/: CMakeLists.txt  package.py
pyopengl/3.1.0/: package.py
pyopengl/3.1.1a1/: CMakeLists.txt  package.py
pyqt/4.10.1/: package.py
pyqt/4.11.4/: CMakeLists.txt  package.py
pyqt/4.12.1/: CMakeLists.txt  package.py
pyside/1.2.4/: CMakeLists.txt  package.py
pyside/2-qt5.6/: CMakeLists.txt  package.py
pyside_tools/0.2.15/: CMakeLists.txt  package.py
python/2.7.10/: package.py
python/2.7.11/: CMakeLists.txt  package.py
python/2.7.13/: CMakeLists.txt  package.py
python/2.7.5/: package.py
python_libraries/: CMakeLists.txt  package.py
qt/4.8.6/: CMakeLists.txt  package.py
qt/5.6.3/: CMakeLists.txt  package.py
scons/2.5.1/: CMakeLists.txt  package.py
setuptools/18.5/: CMakeLists.txt  install.sh  package.py
setuptools/38.2.4/: CMakeLists.txt  package.py
shiboken/1.2.4/: CMakeLists.txt  package.py
sip/4.16.9/: CMakeLists.txt  package.py
sip/4.19.6/: CMakeLists.txt  package.py
tbb/2017_U6/: package.py
tbb/4.3/: package.py
tbb/4.3.1/: CMakeLists.txt  package.py
tbb/4.4/: CMakeLists.txt  package.py
usd/0.7.3/: CMakeLists.txt  package.py
usd/0.7.4/: CMakeLists.txt  package.py
usd/0.8.2/: CMakeLists.txt  package.py
virtualenv/15.0.3/: CMakeLists.txt  package.py
virtualenv/15.1.0/: CMakeLists.txt  package.py
vorbis/1.3.5/: CMakeLists.txt  package.py
vpx/1.6.1/: CMakeLists.txt  package.py
x264/20171123-2245-stable/: CMakeLists.txt  package.py
x265/2.6/: CMakeLists.txt  package.py
yasm/1.3.0/: CMakeLists.txt  package.py
